@@ -55,7 +55,6 @@ struct _php_core_globals {
 	long output_buffering;
 
 	zend_bool sql_safe_mode;
-	zend_bool enable_dl;
 
 	char *output_handler;
 
